--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "quarto-pb-blog"
+  title: "Life Long Learning Lab"
   navbar:
     right:
       - about.qmd
