--- a/posts/_metadata.yml
+++ b/posts/_metadata.yml
@@ -5,4 +5,13 @@
 freeze: true
 
 # Enable banner style title blocks
-title-block-banner: true
+title-block-banner: false
+
+# Author name of all blog posts
+author: 'Peter Baumgartner'
+
+# Table of content settings
+toc: true
+toc-depth: 4
+
+page-layout: article
