without google-analytics

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,17 +3,66 @@ project:
 
 website:
   title: "Life Long Learning Lab"
+  favicon: favicon.ico
+  site-url: https://l3lab.net
+  cookie-consent:
+    type: express
+  page-navigation: true
+  back-to-top-navigation: true
+  # google-analytics: G-XYF778844K
+  twitter-card: true
+  search:
+    location: navbar
+    type: textbox
   navbar:
     right:
-      - about.qmd
+      - text: "About"
+        href: about.qmd
+      - text: "Contact"
+        href: contact.qmd
       - icon: github
         href: https://github.com/petzi53/quarto-pb-blog
       - icon: twitter
         href: https://x.com/pbaumgartner
+
+  page-footer:
+    border: true
+# Theme default
+    background: rgb(81, 118, 153)
+    foreground: rgb(221, 228, 235)
+    center:
+      - text: "About"
+        href: about.qmd
+      - text: "Privacy"
+        href: privacy.qmd
+      - text: "Disclaimer"
+        href: disclaimer.qmd
+    left:
+      - text: <a href=https://l3lab.net>L3Lab</a> © 2023-2024 by <a href=https://l3lab.net/about>Peter Baumgartner</a> is licensed under <a href=https://creativecommons.org/licenses/by/4.0/?ref=chooser-v1>CC BY 4.0</a>
+    right:
+      - text: Proudly powered by <a href=https://quarto.org/>Quarto</a>
+
+  comments:
+    hypothesis:
+      theme: classic
+      openSidebar: false
+      showHighlights: whenSidebarOpen
+      enableExperimentalNewNoteButton: true
+      branding:
+          appBackgroundColor: white
+          ctaBackgroundColor: rgb(81, 118, 153)
+          ctaTextColor: rgb(221, 228, 235)
+          selectionFontFamily: 'helvetica, arial, sans serif'
+
+
 format:
   html:
-    theme: cosmo
+    theme: default
     css: styles.css
 
+editor: visual
+
+margin-header: |
+  ![Peter Baumgartner](/../../portrait-peter.png)
 
 
